--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "watch:scss": "node-sass -w styles/index.scss styles/index.css",
-    "watch:sass": "node-sass -w styles/search.scss styles/search.css"
+    "watch:sass": "node-sass -w styles/search.scss styles/search.css",
+    "watch:sasssun": "node-sass -w styles/sunday.scss styles/sunday.css"
   },
   "author": "",
   "license": "ISC"
