--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "watch:scss": "node-sass -w styles/index.scss styles/index.css",
     "watch:sass": "node-sass -w styles/search.scss styles/search.css",
-    "watch:sasssun": "node-sass -w styles/sunday.scss styles/sunday.css"
+    "watch:sasssun": "node-sass -w styles/sunday.scss styles/sunday.css",
+    "watch:sasssermon": "node-sass -w styles/sermon.scss styles/sermon.css"
   },
   "author": "",
   "license": "ISC"
